--- a/website/index.html
+++ b/website/index.html
@@ -41,7 +41,7 @@
       <li><a href="https://www.linkedin.com/in/ardaerendogru"><i class="fa-brands fa-linkedin"></i></a></li>
       <li><a href="https://www.twitter.com/ardaerendogru"><i class="fa-brands fa-twitter"></i></a></li>
       <li><a href="https://www.instagram.com/ardaerendogruu"><i class="fa-brands fa-instagram"></i></a></li>
-      <li><a href="https://www.facebook.com/profile.php?id=100027608419028"></a><i class="fa-brands fa-facebook"></i></li>
+      <li><a href="https://www.facebook.com/profile.php?id=100027608419028"><i class="fa-brands fa-facebook"></i></a></li>
      </ul>
     </div>
    </div>
